--- a/atom/styles.less
+++ b/atom/styles.less
@@ -13,3 +13,7 @@
 html, body, .tree-view, .tab-bar .tab {
   font-size: @font-size;
 }
+
+atom-text-editor.editor .gutter .line-number.foldable .icon-right {
+  visibility: visible;
+}
